--- a/erpnext/hr/doctype/leave_application/leave_application.json
+++ b/erpnext/hr/doctype/leave_application/leave_application.json
@@ -715,8 +715,8 @@
    "collapsible": 0, 
    "columns": 0, 
    "fieldname": "department", 
-   "fieldtype": "Read Only", 
-   "hidden": 1, 
+   "fieldtype": "Link", 
+   "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
@@ -725,7 +725,7 @@
    "label": "Department", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "employee.sub_department", 
+   "options": "Department", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -1056,7 +1056,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 3, 
- "modified": "2017-08-20 14:35:55.459606", 
+ "modified": "2017-09-09 22:38:16.808662", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Leave Application", 
