--- a/erpnext/hr/doctype/medical_insurance_application/medical_insurance_application.json
+++ b/erpnext/hr/doctype/medical_insurance_application/medical_insurance_application.json
@@ -104,6 +104,35 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "fieldname": "department", 
+   "fieldtype": "Link", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "department", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "Department", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 1, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
    "fieldname": "nationality", 
    "fieldtype": "Read Only", 
    "hidden": 0, 
@@ -422,7 +451,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-08-27 13:01:33.373172", 
+ "modified": "2017-09-09 23:10:19.476988", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Medical Insurance Application", 
