--- a/erpnext/hr/doctype/exit_re_entry_application/exit_re_entry_application.json
+++ b/erpnext/hr/doctype/exit_re_entry_application/exit_re_entry_application.json
@@ -83,6 +83,7 @@
    "in_filter": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
+   "label": "Kindly attach copy of passport when select \"VISA\"", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -142,7 +143,7 @@
    "label": "Exit Type", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "\nSingular\nMultiple", 
+   "options": "\nSingular\nMultiple\nVISA", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -171,6 +172,36 @@
    "label": "Exit Date", 
    "length": 0, 
    "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "depends_on": "eval:doc.exit_type == \"VISA\"", 
+   "fieldname": "country", 
+   "fieldtype": "Link", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Country", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "Country", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -282,6 +313,35 @@
    "in_list_view": 0, 
    "in_standard_filter": 0, 
    "label": "Return Date", 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "depends_on": "eval:doc.exit_type == \"VISA\"", 
+   "fieldname": "passport_copy", 
+   "fieldtype": "Attach Image", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Passport Copy", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -447,7 +507,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-09-17 14:06:52.785306", 
+ "modified": "2017-09-21 20:30:59.207773", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Exit Re Entry Application", 
